# opentron

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Cargo.toml  INSTALL.md  LICENSE-MIT  README.md  nile-wallet-cli.sh  rustfmt.toml
.cargo/: config
.github/workflows/: rust.yml
chain/: Cargo.toml
chain-db/: Cargo.toml
chain-db/src/: lib.rs
chain/src/: block_builder.rs  indexed_block.rs  indexed_header.rs  indexed_transaction.rs  lib.rs  merkle_root.rs
cli/: Cargo.toml
cli/src/: account.rs  cli.yml  main.rs  proposal.rs  system.rs  util.rs  witness.rs
config/: Cargo.toml  conf.nile.toml  conf.toml
config/src/: genesis.rs  lib.rs
constants/: Cargo.toml
constants/src/: block_version.rs  lib.rs
context/: Cargo.toml
context/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: contract.md  evm.md  graphql.md  locked.md  merkle-tree.md  networks.md  proposal.md  shielded-trc20.md  shielded.md  stores.md  sun-network.md  trc10.md  trc20.md  tvm.md  txpool.md  versions.md  wallet-cli.md
etc/: conf.local-test.toml  conf.nile.toml  conf.toml  genesis.local-test.json
keys/: Cargo.toml
keys/src/: address.rs  error.rs  keypair.rs  lib.rs  private.rs  public.rs  signature.rs  ztron.rs
manager/: Cargo.toml
manager/src/: lib.rs  resource.rs  version_fork.rs  vm.rs
manager/src/executor/: mod.rs
manager/src/executor/actuators/: account.rs  asset.rs  exchange.rs  mod.rs  proposal.rs  resource.rs  shielded.rs  smart_contract.rs  transfer.rs  witness.rs
manager/src/governance/: maintenance.rs  mod.rs  proposal.rs  reward.rs
merkle-tree/: Cargo.toml  README.md
merkle-tree/src/: lib.rs  merkle_tree.rs  tree.rs
node-cli/: Cargo.toml  README.md  conf.nile.toml  conf.toml  genesis.json  genesis.nile.json
node-cli/benches/: db.rs
node-cli/src/: channel.rs  cli.yml  config.rs  context.rs  db.rs  discovery.rs  genesis.rs  lib.rs  main.rs  merkle_tree.rs  util.rs
node-cli/src/channel/: protocol.rs  server.rs
node-cli/src/commands/: check.rs  check_db.rs  fix.rs  mod.rs
node-cli/src/discovery/: mod.rs  protocol.rs  server.rs
node-cli/src/graphql/: contract.rs  mod.rs  model.rs  schema.rs  server.rs
opentron/: Cargo.toml  README.md  conf.toml
opentron/src/: cli.yml  config.rs  constants.rs  context.rs  genesis.rs  lib.rs  main.rs  util.rs
opentron/src/channel/: protocol.rs  server.rs
opentron/src/commands/: check.rs  dev.rs  fix.rs  key.rs  mod.rs
opentron/src/discovery/: server.rs
opentron/src/graphql/: contract.rs  mod.rs  model.rs  scalar.rs  schema.rs  server.rs
opentron/src/manager/: actuators.rs  controllers.rs  executor.rs  maintenance.rs  mod.rs  processors.rs  resource.rs  vm.rs
opentron/src/manager/actuators/: account.rs  asset.rs  exchange.rs  mod.rs  proposal.rs  resource.rs  shielded.rs  smart_contract.rs  transfer.rs  witness.rs
opentron/src/manager/executor/: mod.rs
opentron/src/manager/executor/actuators/: account.rs  asset.rs  exchange.rs  mod.rs  proposal.rs  resource.rs  shielded.rs  smart_contract.rs  transfer.rs  witness.rs
opentron/src/manager/governance/: maintenance.rs  mod.rs  proposal.rs  reward.rs
opentron/src/state/: db.rs  keys.rs  mod.rs  parameter.rs  property.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
proto/: Cargo.toml  README.md  build.rs
proto/proto/: chain.proto  common.proto  contract.proto  discovery.proto  state.proto
proto/src/: Contract.rs  Discover.rs  Tron.rs  api.rs  api_grpc.rs  contract_ext.rs  lib.rs  proto.chain.rs  proto.channel.rs  proto.common.rs  proto.contract.rs  proto.discovery.rs  proto.state.rs
proto2/: Cargo.toml  README.md  build.rs
proto2/proto/: chain.proto  channel.proto  common.proto  contract.proto  discover.proto  discovery.proto  state.proto
proto2/src/: lib.rs  state.rs
scripts/: download-ztron-params.sh
services/channel/: Cargo.toml
services/channel/src/: protocol.rs  server.rs
services/discovery/: Cargo.toml
services/discovery/src/: lib.rs  peer.rs  protocol.rs  server.rs
services/graphql/: Cargo.toml
services/graphql/src/: contract.rs  lib.rs  model.rs  scalar.rs  schema.rs
services/producer/: Cargo.toml
services/producer/src/: lib.rs
solc/: Cargo.toml
solc/src/: config.rs  input.rs  lib.rs  output.rs  wrapper.js
state/: Cargo.toml
state/src/: db.rs  keys.rs  lib.rs  parameter.rs  property.rs
tron/: cli.yml  main.rs
tron/commands/: hello.rs
tvm/: Cargo.toml
tvm/src/: backend.rs  lib.rs  precompile.rs
tvm/src/precompile/: alt_bn128.rs  helper.rs  mod.rs  tron.rs
types/: Cargo.toml  README.md
types/src/: lib.rs
wallet/: Cargo.toml
wallet-cli/: Cargo.toml
wallet-cli/src/: cli.yml  error.rs  main.rs
wallet-cli/src/commands/: call.rs  create.rs  freeze.rs  mod.rs  set.rs  shielded.rs  sign.rs  transfer.rs
wallet-cli/src/commands/asset/: mod.rs
wallet-cli/src/commands/contract/: call.rs  create.rs  mod.rs
wallet-cli/src/commands/get/: contract.rs  mod.rs  transaction.rs
wallet-cli/src/commands/list/: mod.rs
wallet-cli/src/commands/set/: contract.rs  mod.rs
wallet-cli/src/commands/system/: freeze.rs  mod.rs  proposal.rs  witness.rs
wallet-cli/src/commands/wallet/: mod.rs
wallet-cli/src/utils/: abi.rs  client.rs  crypto.rs  jsont.rs  mod.rs  trx.rs  walletd.rs
wallet/src/: config.rs  crypto.rs  error.rs  lib.rs
walletd/: Cargo.toml  build.rs
walletd/proto/: api.proto
walletd/src/: lib.rs  main.rs
ztron/: Cargo.toml
ztron/src/: builder.rs  keys.rs  lib.rs
ztron/src/precompiles/: helper.rs  mod.rs
ztron/tests/: burn.hex  mint.hex  precompiles.rs  transfer.hex  transfer.to2.hex
ztron_primitives/: Cargo.toml  README.md
ztron_primitives/benches/: pedersen_hash.rs
ztron_primitives/src/: keys.rs  lib.rs  merkle_tree.rs  note_encryption.rs  prelude.rs  primitives.rs  zip32.rs
ztron_primitives/src/jubjub/: fs.rs  (+1 more)
ztron_proofs/: Cargo.toml
ztron_proofs/examples/: bench.rs
ztron_proofs/src/: lib.rs  prelude.rs  prover.rs
ztron_proofs/src/circuit/: ecc.rs  pedersen_hash.rs  sapling.rs
ztron_proofs/src/sapling/: mod.rs  prover.rs  verifier.rs
(+2 files in other folders)
