[package]
name = 'opentron'
version = '0.1.0'
authors = ['OpenTron Developers <info@opentron.org>']
edition = '2018'
license = "MIT/Apache-2.0"

[lib]
name = "opentron"
path = "opentron/src/lib.rs"

[[bin]]
name = "opentron"
path = "opentron/src/main.rs"

[features]
default = []
nile = []
eip1767 = []

[dependencies]
# app
clap = { version = "2", features = ["yaml"] }
ctrlc = { version = "3", features = ["termination"] }
# logger
log = "0.4"
slog = "2.7"
slog-term = "2.6"
slog-async = "2.6"
slog-stdlog = "4.1"
slog-scope = "4.4"
slog-scope-futures = "0.1"
# protocol
futures = '0.3'
tokio = { version = '1', default-features = false, features = [
    'rt',
    'rt-multi-thread',
    'macros',
    'net',
    'time',
] }
tokio-util = { version = '0.6', features = ['codec'] }
tokio-stream = "0.1"
tokio-compat-02 = "0.2"
prost = '0.7'
prost-types = '0.7'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
# graphql
async-graphql = { version = "2.5", default-features = false, features = [
    "chrono",
    "chrono-tz",
    "string_number",
] }
async-graphql-warp = "2.5"
dataloader = "0.14"
async-trait = "0.1"
warp = { version = "0.2", default-features = false }
http = "0.2"
# misc
primitive-types = "0.8"
num_cpus = "1.13.0"
rand = '0.7'
chrono = '0.4'
hex = '0.4'
sha2 = '0.9'
sha3 = '0.9'
byteorder = '1'
bytes = '1'
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
lazy_static = "1.4"
# workspace
proto2 = { path = './proto2' }
keys = { path = './keys' }
chain = { path = './chain' }
chain-db = { path = './chain-db' }
state = { path = './state' }
config = { path = './config' }
constants = { path = './constants' }
tvm = { path = './tvm' }
crypto = { path = './crypto' }
context = { path = './context' }
discovery = { path = "./services/discovery" }
channel = { path = "./services/channel" }
manager = { path = './manager' }
