[workspace]
members = ["opentron", "cli"]
default-members = ["opentron"]


[patch.crates-io]
# In development.
halo2 = { git = "https://github.com/zcash/halo2.git", rev = "27c4187673a9c6ade13fbdbd4f20955530c22d7f" }
orchard = { git = "https://github.com/zcash/orchard.git", rev = "d0baa18fc6105df4a7847de2b6dc50c5919b3123" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "b7bd6246122a6e9ace8edb51553fbf5228906cbb" }
# zcash_encoding = { path = "components/zcash_encoding" }
zcash_note_encryption = { git = "https://github.com/opentron/librustzcash.git", rev = "765645844dc6615aec2c34d83232c59fc1953662" }

# Unreleased
jubjub = { git = "https://github.com/zkcrypto/jubjub.git", rev = "96ab4162b83303378eae32a326b54d88b75bffc2" }
