[package]
name = "chain-db"
version = "0.1.0"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
rocks = { version = "0.1.9", features = ["static-link"] }
byteorder = '1.3'
bytes = '0.5'
rand = '0.7'
prost = '0.6'
hex = '0.4'
primitive-types = "0.7"
num_cpus = "1.13.0"
proto2 = { path = '../proto2' }
chain = { path = '../chain' }
