[package]
name = "chain-db"
version = "0.1.0"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"

[features]
default = []
static-rocksdb = ["rocks/static-link"]

[dependencies]
log = "0.4"
rocks = "0.1.10"
byteorder = '1'
bytes = '1'
rand = '0.8'
prost = '0.7'
hex = '0.4'
primitive-types = "0.8"
num_cpus = "1"

proto = { path = '../proto' }
chain = { path = '../chain' }
