[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
hex = "0.4"
clap = { version = "2", features = ["yaml"] }
chrono = '0.4'
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde_json = '1.0'

proto = { path = '../proto' }
keys = { path = '../keys' }
crypto = { path = '../crypto' }
