[package]
name = "config"
version = "0.1.0"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"

[dependencies]
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
prost = '0.6'
hex = '0.4'
toml = '0.5'

chain = { path = '../chain' }
keys = { path = '../keys' }
proto2 = { path = '../proto2' }
prost-types = '0.6'
