[package]
name = "context"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[dependencies]
primitive-types = "0.8"
log = "0.4"
hex = "0.4"
tokio = "1"
# workspace
config = { path = '../config' }
chain = { path = '../chain' }
chain-db = { path = '../chain-db' }
proto = { path = '../proto' }
manager = { path = '../manager' }
