[package]
name = "context"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[features]
default = []
javatron = ["manager/javatron"]
static-rocksdb = ["manager/static-rocksdb", "chain-db/static-rocksdb"]

[dependencies]
log = "0.4"
hex = "0.4"
tokio = "1"
# workspace
types = { path = "../types" }
config = { path = "../config" }
chain = { path = "../chain" }
chain-db = { path = "../chain-db" }
proto = { path = "../proto" }
manager = { path = "../manager" }
