[package]
name = "manager"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"
version = "0.1.0"

[dependencies]
primitive-types = "0.8"
chrono = '0.4'
hex = '0.4'
log = '0.4'
prost = '0.7'
lazy_static = "1.4"
sha3 = "0.9"

# workspace
chain = { path = '../chain' }
config = { path = '../config' }
chain-db = { path = '../chain-db' }
constants = { path = '../constants' }
crypto = { path = '../crypto' }
keys = { path = '../keys' }
proto = { path = '../proto' }
state = { path = '../state' }
tvm = { path = '../tvm' }
