[package]
name = 'node-cli'
version = '0.1.0'
authors = ['andelf <andelf@gmail.com>']
edition = '2018'
default-run = "channel-server"

[dependencies]
rand = '0.7'
chrono = '0.4'
toml = '0.5'
serde_json = '1.0'
hex = '0.4'
sha2 = '0.8'
hex-literal = '0.2'
byteorder = '1.3'
bytes = '0.5'
futures = '0.3'
prost = '0.6'
prost-types = '0.6'
serde = { version = '1.0', features = ['derive'] }
tokio = { version = '0.2', default-features = false, features = [
    'rt-threaded',
    'macros',
    'tcp',
    'udp',
    'time',
    'dns',
    'stream',
] }
tokio-util = { version = '0.3', features = ['codec'] }
reqwest = { version = '0.10', default-features = false, features = ['json'] }
log = "0.4"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
slog-stdlog = "4.0"
slog-scope = "4.3"
slog-scope-futures = "0.1"
ctrlc = { version = "3", features = ["termination"] }
#rocks = { version = "0.1.7", git = "https://github.com/bh1xuw/rust-rocks.git" }
rocks = "0.1.7"
# workspace
proto2 = { path = '../proto2' }
keys = { path = '../keys' }
primitives = { path = '../primitives' }
chain = { path = '../chain' }
