[package]
name = 'opentron'
version = '0.1.0'
authors = ['OpenTron Developers <info@opentron.org>']
edition = '2018'
license = "MIT/Apache-2.0"

[dependencies]
# app
clap = { version = "2", features = ["yaml"] }
ctrlc = { version = "3", features = ["termination"] }
# logger
log = "0.4"
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
slog-stdlog = "4.0"
slog-scope = "4.3"
slog-scope-futures = "0.1"
# protocol
futures = '0.3'
tokio = { version = '0.2', default-features = false, features = [
    'rt-threaded',
    'macros',
    'tcp',
    'udp',
    'time',
    'dns',
    'stream',
] }
tokio-util = { version = '0.3', features = ['codec'] }
prost = '0.6'
prost-types = '0.6'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
# graphql
juniper = { version = "0.14", git = "https://github.com/graphql-rust/juniper.git" }
juniper_hyper = { version = "0.5.2", git = "https://github.com/graphql-rust/juniper.git" }
hyper = "0.13"
# db
# rocks = { version = "0.1.7", git = "https://github.com/bh1xuw/rust-rocks.git" }
rocks = "0.1.8"
# misc
primitive-types = "0.7"
num_cpus = "1.13.0"
rand = '0.7'
chrono = '0.4'
toml = '0.5'
hex = '0.4'
sha2 = '0.9'
hex-literal = '0.3'
byteorder = '1.3'
bytes = '0.5'
reqwest = { version = '0.10', default-features = false, features = ['json'] }
# workspace
proto2 = { path = '../proto2' }
keys = { path = '../keys' }
chain = { path = '../chain' }
