[package]
name = "proto"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde", "serde"]

[dependencies]
bytes = "0.5"
protobuf = { version = "2", features = ["with-serde"] }
grpc = "0.8"
grpc-protobuf = "0.8"
serde = { version = "1.0", optional = true, features = ["derive"] }

[lib]
test = false
doctest = false

[build-dependencies]
protoc-rust = "2.16"
protoc-rust-grpc = "0.8"
