[package]
name = "proto2"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[dependencies]
bytes = "1"
prost = "0.7"
# Any
prost-types = "0.7"
hex = "0.4"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.7"
