[package]
name = "solc"
version = "0.5.12"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"

[dependencies]
# deno_core = "0.55"
rusty_v8 = "0.10"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking"], default-features = true }
# semver = "0.10"
