[package]
name = "state"
version = "0.1.0"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"

[dependencies]
log = "0.4"
byteorder = '1.4'
bytes = '1'
prost = '0.7'
primitive-types = "0.8"
num_cpus = "1"
rocks = { version = "0.1.10", features = ["static-link"] }
keys = { path = '../keys' }
proto = { path = '../proto' }
config = { path = '../config' }
constants = { path = '../constants' }
