[package]
name = "tvm"
version = "4.0.1"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[dependencies]
log = "0.4"
libsecp256k1 = "0.3"
sha3 = "0.9"
sha2 = "0.9"
digest = "0.9"
bn-plus = "0.4"
hex = "0.4"
num-bigint = "0.3"
num-traits = "0.2"
lazy_static = "1"

types = { path = "../types" }
# evm = { path = '../../evm' }
evm = { git = "https://github.com/opentron/evm", branch = "tron" }
ztron = { path = '../ztron' }
