[package]
name = "wallet-cli"
version = "0.1.0"
authors = ["Shuyu WANG <andelf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml"] }
grpc = "0.6.1"
protobuf = "2"
futures = "0.1"
futures-cpupool = "0.1"
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
sha2 = "0.8"
sha3 = "0.8"
thiserror = "1.0"
tokio = "0.2"
tonic = "0.1.0-beta.1"
rand = "0.7"
itertools = "0.8"
rpassword = "4"
ethabi = "9"

proto = { path = "../proto" }
keys = { path = "../keys" }
walletd = { path = "../walletd" }
