[package]
name = "wallet-cli"
version = "0.1.0"
authors = ["Shuyu WANG <andelf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml"] }
grpc = "0.6.2"
protobuf = "2"
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
sha2 = "0.8"
sha3 = "0.8"
thiserror = "1.0"
tokio = "0.2"
tonic = "0.1"
rand = "0.7"
itertools = "0.8"
rpassword = "4"
ethabi = "11"
lazy_static = "1.4"

proto = { path = "../proto" }
keys = { path = "../keys" }
walletd = { path = "../walletd" }
ztron_primitives = { path = "../ztron_primitives" }
