[package]
name = "wallet"
version = "0.1.0"
authors = ["andelf <andelf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
aes = "0.4"
cfb-mode = "0.4"
sha2 = "0.9"
rand = "0.7"
hex = "0.4"

keys = { path = "../keys" }
ztron_primitives = { path = "../ztron_primitives" }
