[package]
name = "ztron"
version = "0.1.0"
authors = ["andelf <andelf@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
bech32 = "0.7"
hex = "0.4"
sha2 = "0.9"
primitive-types = "0.7"
lazy_static = "1.4"
ethabi = "12"
crypto_api_chachapoly = "0.2.1"

keys = { path = "../keys" }

zcash_primitives = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
zcash_proofs = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
pairing = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
ff = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
bellman = { git = "https://github.com/opentron/librustzcash", branch = "tron" }

# For Local Devs:
#zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
#zcash_proofs = { path = "../../librustzcash/zcash_proofs" }
#pairing = { path = "../../librustzcash/pairing" }
#ff = { path = "../../librustzcash/ff" }
#bellman = { path = "../../librustzcash/bellman" }
