[package]
name = "ztron"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[dependencies]
rand = "0.7"
bech32 = "0.7"
hex = "0.4"
sha2 = "0.9"
primitive-types = "0.7"
lazy_static = "1.4"
ethabi = "12"
crypto_api_chachapoly = "0.4"

keys = { path = "../keys" }

zcash_primitives = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
zcash_proofs = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
bls12_381 = "0.3.1"
jubjub = "0.5.1"
ff = "0.8"
group = "0.8"
bellman = { version = "0.8", default-features = false, features = ["groth16"] }

# For Local Devs:
# zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
# zcash_proofs = { path = "../../librustzcash/zcash_proofs" }
