[package]
name = "ztron"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[dependencies]
rand = "0.8"
bech32 = "0.8"
hex = "0.4"
sha2 = "0.9"
lazy_static = "1.4"
ethabi = "13"
crypto_api_chachapoly = "0.4"

types = { path = "../types" }
keys = { path = "../keys" }

zcash_primitives = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
zcash_proofs = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
zcash_note_encryption = { git = "https://github.com/opentron/librustzcash", branch = "tron" }
bls12_381 = "0.5"
jubjub = "0.7"
ff = "0.10"
group = "0.10"
bellman = { version = "0.10", default-features = false, features = ["groth16"] }

# For Local Devs:
# zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
# zcash_proofs = { path = "../../librustzcash/zcash_proofs" }
