[package]
name = "ztron_proofs"
description = "Zcash zk-SNARK circuits and proving APIs"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Andelf <andelf@gmail.com>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bellman = "~0.2"
blake2b_simd = "0.5"
byteorder = "1"
directories = { version = "1", optional = true }
ff = "~0.5"
pairing = "~0.15"
rand_core = "0.5.1"
ztron_primitives = { version = "0.1.0", path = "../ztron_primitives" }

[dev-dependencies]
rand_xorshift = "0.2"

[features]
default = ["local-prover", "multicore"]
local-prover = ["directories"]
multicore = ["bellman/multicore"]

[badges]
maintenance = { status = "actively-developed" }
