[package]
name = "discovery-service"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "The discovery protocol"

[dependencies]
bytes = "1"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["net"] }
tokio-stream = "0.1"
prost = "0.8"
chrono = "0.4"
rand = "0.8"
log = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# workspace
proto = { path = "../../proto" }
config = { path = "../../config" }
context = { path = "../../context" }
