[package]
name = "graphql-service"
version = "0.1.0"
authors = ["OpenTron Developers <info@opentron.org>"]
edition = "2018"

[dependencies]
log = "0.4"
byteorder = "1"
hex = "0.4"
chrono = "0.4"
prost = "0.8"
serde_json = "1.0"
tokio = { version = "1", default-features = false }
async-graphql = { version = "2.10.1", default-features = false, features = [
    "chrono",
    "chrono-tz",
    "string_number",
] }
async-graphql-warp = "2.10.1"
# dataloader = "0.14"
# async-trait = "0.1"
warp = { version = "0.3", default-features = false }
http = "0.2"
sysinfo = "0.20"
# workspace
types = { path = "../../types" }
keys = { path = "../../keys" }
proto = { path = "../../proto" }
state = { path = "../../state" }
chain = { path = "../../chain" }
chain-db = { path = "../../chain-db" }
context = { path = "../../context" }
manager = { path = "../../manager" }
