[package]
name = "producer-service"
version = "0.1.0"
authors = ['OpenTron Developers <info@opentron.org>']
edition = "2018"

[dependencies]
bytes = '1'
byteorder = '1'
prost = '0.7'
log = "0.4"
slog = "2"
slog-scope = "4.4"
slog-scope-futures = "0.1"
futures = "0.3"
chrono = '0.4'
tokio = { version = '1', default-features = false, features = ['macros', 'net', 'time'] }
tokio-util = { version = '0.6', features = ['codec'] }
tokio-stream = "0.1"
primitive-types = "0.8"
hex = '0.4'
# workspace
proto = { path = '../../proto' }
chain = { path = '../../chain' }
keys = { path = '../../keys' }
context = { path = '../../context' }
config = { path = '../../config' }
constants = { path = '../../constants' }
